feat: add delete org/env commands
(cherry picked from commit edc963c6578eb4d64ca76f9b08382fafdeca655e)